# Learning_localization_from_scratch_ws

./: .gitignore  README.md  catkin_make.sh  install_dependence.sh
src/: README.md
src/data/: kitti_lio_sam_pose.txt  tum_lio_sam_pose.txt
src/dead_reckoning/odom_imu/config/: filter.yaml  odom_imu.rviz  odom_imu.yaml
src/dead_reckoning/odom_imu/launch/: odom_imu.launch
src/dead_reckoning/odom_imu/src/: odom_imu_flow.cc
src/doc/ground_truth/: tum_ground_truth.txt  tum_vrs_gps.txt
src/doc/mapping_results/: kitti_lio_sam_pose.txt  tum_lio_sam_pose.txt
src/kaist_tool/: .rosinstall  .rosinstall.bak
src/kaist_tool/file_player/: CMakeLists.txt  README.md
src/kaist_tool/kaist2bag/: CMakeLists.txt  README.md
src/kaist_tool/kaist_description/: CMakeLists.txt  package.xml
src/kaist_tool/kaist_description/launch/: kaist_description.launch
src/kaist_tool/kaist_description/rviz/: kaist.rviz
src/kaist_tool/kaist_description/urdf/: urban08.urdf
src/lidar_location/: CMakeLists.txt  README.md  package.xml
src/lidar_location/launch/: front_end.launch
src/lidar_location/rviz/: front_end.rviz
src/lidar_location/src/: front_end_node.cpp
src/lidar_odometry/: CMakeLists.txt  package.xml
src/lidar_odometry/include/: feature_extraction.h  scan_to_map_odometry.h  scan_to_scan_odometry.h
src/lidar_odometry/launch/: run.launch
src/lidar_odometry/rviz_cfg/: rviz.rviz
src/lidar_odometry/src/: feature_extraction.cpp  scan_to_map_odometry.cpp  scan_to_scan_odometry.cpp
src/mapping/LIO-SAM/: CMakeLists.txt  package.xml
src/odom_imu/: CMakeLists.txt  package.xml
src/odom_imu/launch/: odom_imu.launch
src/odom_imu/src/: odom_imu_flow.cc
src/results/: kitti_lio_sam_pose.txt
src/scripts/: evo.sh  kaist2evo.py
(+48 files in other folders)
